<resources>
    <string name="app_name">HelloWorld</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_no_account_hint">Don\'t have an account yet? Create one</string>
    <string name="register_upload_photo">Chose your avatar</string>
    <string name="register_use_default">Use default</string>
    <string name="register_first_name">First name</string>
    <string name="register_last_name">Last name</string>
    <string name="register_email">Email</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_create_account">Create account</string>
    <string name="register_member">Already a member? Login</string>
    <string name="logout">Logout</string>
    <string name="play">Play</string>
    <string name="training">Practise</string>
    <string name="exit">Exit</string>
    <string name="statistics">Statistics</string>
    <string name="chose_you_logo">chose you logo</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_about">Title</string>
    <string name="let_us_know_what_you_think">Let us know what you think</string>
    <string name="send">Send</string>
    <string name="helloworld_2017">HelloWorld © 2018</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="chose_level">Chose level</string>
    <string name="rookie">Rookie</string>
    <string name="professional">Professional</string>
    <string name="ghost">Ghost</string>
    <string name="score_0">Score: 0</string>
    <string name="main_menu">Main Menu</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
