<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:weightSum="1">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:weightSum="1"
            >

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/hw_logo"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentStart="true"
                />

            <ImageView
                android:id="@+id/userPhoto"
                android:layout_alignParentEnd="true"
                android:layout_width="80dp"
                android:layout_height="80dp"/>

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/uploadPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_upload_photo"
                android:padding="12dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                />
            <Button
                android:id="@+id/btn_useDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:padding="12dp"
                android:text="@string/register_use_default"
                android:onClick="onDefaultPhotoListener"
                android:layout_alignParentEnd="true"
                />


        </RelativeLayout>



        <!--  FirstName Label -->
        <EditText android:id="@+id/input_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/register_first_name"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />

        <!--  LastName Label -->
        <EditText android:id="@+id/input_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/register_last_name" />


        <!-- Email Label -->
        <EditText android:id="@+id/input_email"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/register_email" />

        <!-- Username Label -->
        <EditText android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_username"
            android:inputType="text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />

        <!-- Password Label -->
        <EditText android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"
            android:hint="@string/register_password"/>

        <!-- Signup Button -->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/register_create_account"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/register_member"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>
