<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        xmlns:android="http://schemas.android.com/apk/res/android">


        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <ImageView
            android:layout_width="158dp"
            android:layout_height="158dp"
            android:layout_marginBottom="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/hw_logo"
            />

        <!-- Username Label -->

        <EditText android:id="@+id/usernameLoginId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/login_username_hint" />

        <!-- Password Label -->
        <EditText android:id="@+id/passwordLoginId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/login_password_hint"/>

        <Button
            android:id="@+id/loginButtonId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/login_button"/>

        <TextView android:id="@+id/signUpLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/login_no_account_hint"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>
