<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="300dp"
    android:background="#1b1a1a"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"

    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/rookie"
            android:textAllCaps="true"
            android:textColor="#0e6a60"
            android:id="@+id/rookie_level"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/pro_level"
            android:text="@string/professional"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:textColor="#0e6a60"
            android:textSize="30sp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/ghost"
            android:id="@+id/ghost_level"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:textColor="#0e6a60"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>