<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:weightSum="1">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:weightSum="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Username:"
                android:textSize="20sp"
                android:id="@+id/username_profile"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentStart="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginStart="10dp" android:id="@+id/username_text_profile"
                android:textColor="#0e6a60"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/username_profile"
                />

            <ImageView
                android:id="@+id/userPhotoProfile"
                android:layout_alignParentEnd="true"
                android:layout_width="80dp"
                android:layout_height="80dp"/>

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/uploadPhotoProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:padding="12dp"
                android:text="@string/register_upload_photo"
                android:layout_alignParentEnd="true"
                />


        </RelativeLayout>



        <!--  FirstName Label -->
        <EditText android:id="@+id/input_firstNameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/register_first_name"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            />

        <!--  LastName Label -->
        <EditText android:id="@+id/input_lastNameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/register_last_name" />


        <!-- Email Label -->
        <EditText android:id="@+id/input_emailProfile"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/register_email" />


        <!-- Password Label -->
        <EditText android:id="@+id/input_passwordProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"
            android:hint="@string/register_password"/>

        <EditText android:id="@+id/input_passwordConfirmProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"/>

        <!-- Signup Button -->
        <Button
            android:id="@+id/btn_update_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Update profile"/>

    </LinearLayout>
</ScrollView>
