<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        xmlns:android="http://schemas.android.com/apk/res/android">


        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <ImageView
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/hw_logo"
            />

        <TextView
            android:layout_width="match_parent"
            android:textColor="#0e6a60"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:text="@string/let_us_know_what_you_think"
            android:layout_height="wrap_content" />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.5"/>


        <EditText android:id="@+id/title_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/title_about" />

        <EditText android:id="@+id/message_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:hint="Message"/>

        <Button
            android:id="@+id/send_feedback_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/send"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/helloworld_2017"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:textColor="#e4dbdb"
        android:layout_height="wrap_content" />
</RelativeLayout>
